--- a/src/webparts/justAnotherGallery/JustAnotherGalleryWebPart.manifest.json
+++ b/src/webparts/justAnotherGallery/JustAnotherGalleryWebPart.manifest.json
@@ -20,7 +20,8 @@
     "description": { "default": "image gallery with image meta informations" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "JustAnotherGallery"
+      "description": "JustAnotherGallery",
+      "listId": null
     }
   }]
 }
